<resources>
    <string name="no_tags_created">No tags created yet</string>
    <string name="create_tags_sidebar">Create tags in the sidebar</string>

    <string name="editor_ok">OK</string>
    <string name="editor_cancel">Cancel</string>
    <string name="editor_title_new">New Reminder</string>
    <string name="editor_title_edit">Edit Reminder</string>
    <string name="editor_back">Back</string>
    <string name="editor_done">Done</string>
    <string name="error_title_required">Title is required</string>

    <string name="editor_placeholder_title">Title</string>
    <string name="editor_placeholder_notes">Notes</string>
...
